First-Page-Added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Jaumo_App</string>
+    <string name="find_your_someone">Find Your Someone</string>
+    <string name="sign_up">Sign up</string>
+    <string name="signing_in_policy">By signing up, you accept our terms and privacy policy</string>
+    <string name="have_account">Do you already have an account?</string>
+    <string name="log_in">Log in</string>
 </resources>
