--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,24 @@
 <resources>
     <string name="app_name">Jaumo_App</string>
-    <string name="find_your_someone">Find Your Someone</string>
-    <string name="sign_up">Sign up</string>
-    <string name="signing_in_policy">By signing up, you accept our terms and privacy policy</string>
-    <string name="have_account">Do you already have an account?</string>
-    <string name="log_in">Log in</string>
+    <string name="signup_exp">Please tell us your date of birth so that we can taylor your experience.</string>
+    <string name="signup_askAge">How old are you?</string>
+    <string name="hint_month">M...</string>
+    <string name="hint_year">Year</string>
+    <string name="btn_age">Continue</string>
+    <string name="imageMaintxt">Show us your smile!</string>
+    <string name="imageBodytxt">You won\'t be visible to others until you\'ve added a photo.</string>
+    <string name="Image_upload">Upload photo</string>
+    <string name="location_Maintxt">Do you want to see people nearby?</string>
+    <string name="location_Bodytxt">Increase your chances by allowing access in the following dialogue. We only use your location to find people near by.</string>
+    <string name="locationButton_no">Maybe later</string>
+    <string name="locationButon_yes">Yes, of course</string>
+    <string name="interestMaintxt">What are you looking for?</string>
+    <string name="interest_Bodytxt">To see the right people, tell us who your\'re looking for.</string>
+    <string name="interestButton2">Women</string>
+    <string name="interestButton1">Men</string>
+    <string name="hint_day">Day</string>
+    <string name="genderButton2">Male</string>
+    <string name="genderButton1">Female</string>
+    <string name="gender_Bodytxt">Help us to match you up with like-minded people.</string>
+    <string name="gender_Maintxt">What gender do you identify as?</string>
 </resources>
