HomePage for men added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,24 @@
     <string name="genderButton1">Female</string>
     <string name="gender_Bodytxt">Help us to match you up with like-minded people.</string>
     <string name="gender_Maintxt">What gender do you identify as?</string>
+    <string name="abhay_sharma">* Abhay Sharma *</string>
+    <string name="suraj_gupta">* Suraj Gupta *</string>
+    <string name="binod_jaiswal">* Binod Jaiswal *</string>
+    <string name="tanmay_punit">* Tanmay Punit *</string>
+    <string name="nipun_jain">* Nipun Jain *</string>
+    <string name="bunty_gosh">* Bunty Gosh *</string>
+    <string name="kailash_patel">* Kailash Patel *</string>
+    <string name="dhruv_shorey">* Dhruv Shorey *</string>
+    <string name="rahul_singh">* Rahul Singh *</string>
+    <string name="hiren_mistry">* Hiren Mistry *</string>
+    <string name="pravin_fransis">* Pravin Fransis *</string>
+    <string name="gaurav_singh">* Gaurav Singh *</string>
+    <string name="aditya_sharma">* Aditya Sharma *</string>
+    <string name="mousin_sayyed">* Mousin Sayyed *</string>
+    <string name="amir_gupta">* Amir Gupta *</string>
+    <string name="arsalan_shaikh">* Arsalan Shaikh *</string>
+    <string name="vineet_yadav">* Vineet Yadav *</string>
+    <string name="bipin_pal">* Bipin Pal *</string>
+    <string name="sachin_goel">* Sachin Goel *</string>
+    <string name="abhinav_bhati">* Abhinav Bhati *</string>
 </resources>
