--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,24 @@
     <string name="bipin_pal">* Bipin Pal *</string>
     <string name="sachin_goel">* Sachin Goel *</string>
     <string name="abhinav_bhati">* Abhinav Bhati *</string>
+    <string name="anita_dev">* Anita Dev*</string>
+    <string name="suman_jaiswal">* Suman Jaiswal *</string>
+    <string name="neha_sharma">* Neha Sharma *</string>
+    <string name="jaiswi_jain">* Jaiswi Jain *</string>
+    <string name="priya_rai">* Priya Rai *</string>
+    <string name="suman_shiddique">* Suman Shiddique *</string>
+    <string name="dimple_mundwa">* Dimple Mundwa *</string>
+    <string name="shreya_singh">* Shreya Singh *</string>
+    <string name="nidhi_chauhan">* Nidhi Chauhan *</string>
+    <string name="jaishri_hansa">* Jaishri Hansa *</string>
+    <string name="muskan_khan">* Muskan Khan *</string>
+    <string name="priyanka_lobhe">* Priyanka Lobhe *</string>
+    <string name="yamini_gautam">* Yamini Gautam *</string>
+    <string name="kaira_singh">* Kaira Singh *</string>
+    <string name="heena_shaikh">* Heena Shaikh *</string>
+    <string name="kulsum_khan">* Kulsum Khan *</string>
+    <string name="nisha_dubey">* Nisha Dubey *</string>
+    <string name="lovely_joy">* Lovely Joy *</string>
+    <string name="kareshma_yadav">* Kareshma Yadav *</string>
+    <string name="neeta_singh">* Neeta Singh *</string>
 </resources>
