--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,5 +125,11 @@
     <string name="settings">Settings</string>
     <string name="sent_likes">Sent likes</string>
     <string name="become_vip">Become a VIP</string>
+    <string name="login">Log in</string>
+    <string name="email_address">E-mail address</string>
+    <string name="password">Password</string>
+    <string name="sign_in">Sign in</string>
+    <string name="show">Show</string>
+    <string name="create_account">or create a new account</string>
 
 </resources>
