--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="music">MUSIC</string>
     <string name="diet">DIET</string>
     <string name="children">CHILDREN</string>
-    <string name="over_1000_people">Over 1000 people</string>
+    <string name="over_1000_people">Over 15+ people</string>
     <string name="all">All</string>
     <string name="find_your_someone">Find Your Someone</string>
     <string name="sign_up">Sign up</string>
