--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,5 +125,9 @@
     <string name="settings">Settings</string>
     <string name="sent_likes">Sent likes</string>
     <string name="become_vip">Become a VIP</string>
+    <string name="upgrade">Upgrade to premium!</string>
+    <string name="noMessage">No new messages yet : (</string>
+    <string name="messages">Messages</string>
+    <string name="go_back">Go back!</string>
 
 </resources>
