--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,18 +125,24 @@
     <string name="settings">Settings</string>
     <string name="sent_likes">Sent likes</string>
     <string name="become_vip">Become a VIP</string>
-<<<<<<< HEAD
+    <
+    <
+    <
+    <
+    <
+    <
+    < HEAD
     <string name="upgrade">Upgrade to premium!</string>
     <string name="noMessage">No new messages yet : (</string>
     <string name="messages">Messages</string>
     <string name="go_back">Go back!</string>
-=======
+    =======
     <string name="login">Log in</string>
     <string name="email_address">E-mail address</string>
     <string name="password">Password</string>
     <string name="sign_in">Sign in</string>
     <string name="show">Show</string>
     <string name="create_account">or create a new account</string>
->>>>>>> 70e8532605ad71ffc9c4e034b9af67128f70d675
+    >>>>>>> 70e8532605ad71ffc9c4e034b9af67128f70d675
 
 </resources>
