--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -151,6 +151,13 @@
     <string name="want">you want.</string>
     <string name="India">India</string>
     <string name="enter_location">Enter Location</string>
+    <string name="enter_profession">Enter Profession</string>
     <string name="where_do_you_live">Where do you live ?</string>
+    <string name="your_profession">What &amp;s your profession</string>
+    <string name="what_are_you_looking_for">What are you looking for ? </string>
+    <string name="i_want">I want</string>
+    <string name="ask_me">Ask me</string>
+    <string name="a_man">a man</string>
+
 
 </resources>
