thank you added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -158,6 +158,9 @@
     <string name="i_want">I want</string>
     <string name="ask_me">Ask me</string>
     <string name="a_man">a man</string>
+    <string name="thank_you">We the members of team yellow are greatful for getting this wonderful oppurtunity,to colllaborate with each other and present it to you.This experience has taught us many things and helped us to work with great people.Wishing everyone in Masai good health and a great year and journey ahead.</string>
+    <string name="team">Team Yellow.</string>
+    <string name="regards">Regards,</string>
 
 
 </resources>
